--- a/index.html
+++ b/index.html
@@ -1,5 +1,88 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>iMacWeirdo Project Space</title>
-  </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Retro Audio Talk</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            color: #000;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #003366;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav {
+            display: flex;
+            justify-content: center;
+            background-color: #cce6ff;
+            padding: 5px 0;
+        }
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: #003366;
+            font-weight: bold;
+        }
+        main {
+            padding: 20px;
+            width: 80%;
+            margin: 0 auto;
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            background-color: #003366;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+        h1 {
+            font-size: 24px;
+        }
+        p {
+            line-height: 1.6;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Welcome to Retro Audio Talk</h1>
+</header>
+
+<nav>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Products</a>
+    <a href="#">Contact</a>
+</nav>
+
+<main>
+    <h2>About Us</h2>
+    <p>Welcome to Retro Audio Talk, a place where audio enthusiasts gather to discuss gear, recordings, and everything in between. Our community is dedicated to sharing knowledge and passion for all things audio. Whether you're a seasoned pro or a curious newbie, you'll find a welcoming space here.</p>
+    
+    <h2>Featured Products</h2>
+    <ul>
+        <li>Secret of the Pros - Mixing DVD</li>
+        <li>Pro Tools Vol 1 DVD</li>
+        <li>Advanced II & III</li>
+        <li>Drums on Demand Loops</li>
+    </ul>
+</main>
+
+<footer>
+    <p>&copy; 2024 Retro Audio Talk. All rights reserved.</p>
+</footer>
+
+</body>
+</html>
