--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Retro Audio Talk</title>
+    <title>iMacWeirdo's Project Space</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -57,7 +57,7 @@
 <body>
 
 <header>
-    <h1>Welcome to Retro Audio Talk</h1>
+    <h1>Welcome</h1>
 </header>
 
 <nav>
