--- a/about.html
+++ b/about.html
@@ -1,1 +1,86 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us - Retro Audio Talk</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            color: #000;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #003366;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav {
+            display: flex;
+            justify-content: center;
+            background-color: #cce6ff;
+            padding: 5px 0;
+        }
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: #003366;
+            font-weight: bold;
+        }
+        main {
+            padding: 20px;
+            width: 80%;
+            margin: 20px auto;
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            background-color: #003366;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+        h1 {
+            font-size: 24px;
+        }
+        p {
+            line-height: 1.6;
+        }
+    </style>
+</head>
+<body>
 
+<header>
+    <h1>About Retro Audio Talk</h1>
+</header>
+
+<nav>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Products</a>
+    <a href="#">Contact</a>
+</nav>
+
+<main>
+    <h2>Our Story</h2>
+    <p>Retro Audio Talk was founded in 1998 to provide a platform for audio enthusiasts to connect and share their passion for sound. Originally focused on supporting the Panasonic DA7 digital mixer, our community has grown to encompass all aspects of audio recording and production.</p>
+    
+    <h2>Our Mission</h2>
+    <p>We aim to create a welcoming space where both newcomers and experienced professionals can exchange ideas, ask questions, and learn from each other. Our members are known for their friendly and helpful nature, always ready to lend a hand.</p>
+    
+    <h2>Join Us</h2>
+    <p>We invite you to become a part of our community. Whether you're looking for advice on the latest gear or wanting to share your own experiences, Retro Audio Talk is the place for you.</p>
+</main>
+
+<footer>
+    <p>&copy; 2024 Retro Audio Talk. All rights reserved.</p>
+</footer>
+
+</body>
+</html>
