--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Retro Audio Talk</title>
+    <title>About Me</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -61,18 +61,17 @@
 </header>
 
 <nav>
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Products</a>
+    <a href="/index.html">Home</a>
+    <a href="/about.html">About</a>
     <a href="#">Contact</a>
 </nav>
 
 <main>
-    <h2>Our Story</h2>
-    <p>Retro Audio Talk was founded in 1998 to provide a platform for audio enthusiasts to connect and share their passion for sound. Originally focused on supporting the Panasonic DA7 digital mixer, our community has grown to encompass all aspects of audio recording and production.</p>
+    <h2>About Me</h2>
+    <p>I am just a random kid from Iowa interested in all things technology.</p>
     
-    <h2>Our Mission</h2>
-    <p>We aim to create a welcoming space where both newcomers and experienced professionals can exchange ideas, ask questions, and learn from each other. Our members are known for their friendly and helpful nature, always ready to lend a hand.</p>
+    <h2>My Mission</h2>
+    <p>I aim to bring old audio software that has been "wiped" from the internet back to light and make it completely available to the general public.</p>
     
     <h2>Join Us</h2>
     <p>We invite you to become a part of our community. Whether you're looking for advice on the latest gear or wanting to share your own experiences, Retro Audio Talk is the place for you.</p>
