--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
 </main>
 
 <footer>
-    <p>&copy; 2024 Retro Audio Talk. All rights reserved.</p>
+    <p>Site made by and updated by Wyatt Kraai</p>
 </footer>
 
 </body>
