--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <nav>
     <a href="#">Home</a>
     <a href="/about.html">About</a>
-    <a href="#">Contact</a>
+    <a href="mailto:imacweirdo@outlook.com">Contact</a>
 </nav>
 
 <main>
