--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         main {
             padding: 20px;
             width: 80%;
-            margin: 0 auto;
+            margin: 20px auto;
             background-color: white;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
@@ -48,9 +48,24 @@
         }
         h1 {
             font-size: 24px;
+            text-align: center;
         }
-        p {
-            line-height: 1.6;
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        th, td {
+            border: 1px solid #ccc;
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            background-color: #003366;
+            color: white;
+        }
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
         }
     </style>
 </head>
@@ -67,16 +82,33 @@
 </nav>
 
 <main>
-    <h2>About Us</h2>
-    <p>Welcome to Retro Audio Talk, a place where audio enthusiasts gather to discuss gear, recordings, and everything in between. Our community is dedicated to sharing knowledge and passion for all things audio. Whether you're a seasoned pro or a curious newbie, you'll find a welcoming space here.</p>
-    
-    <h2>Featured Products</h2>
-    <ul>
-        <li>Secret of the Pros - Mixing DVD</li>
-        <li>Pro Tools Vol 1 DVD</li>
-        <li>Advanced II & III</li>
-        <li>Drums on Demand Loops</li>
-    </ul>
+    <h2>My Projects</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Project Name</th>
+                <th>Description</th>
+                <th>Year</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Sound Wave</td>
+                <td>A comprehensive sound editing tool for professionals.</td>
+                <td>2023</td>
+            </tr>
+            <tr>
+                <td>Mix Master</td>
+                <td>An intuitive mixing app for budding artists.</td>
+                <td>2022</td>
+            </tr>
+            <tr>
+                <td>Beat Maker</td>
+                <td>A rhythm creation platform for musicians.</td>
+                <td>2024</td>
+            </tr>
+        </tbody>
+    </table>
 </main>
 
 <footer>
