--- a/index.html
+++ b/index.html
@@ -7,50 +7,44 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-<header>
-    <h1>Welcome</h1>
-</header>
-
-<nav>
-    <a href="#">Home</a>
-    <a href="/about.html">About</a>
-    <a href="mailto:imacweirdo@outlook.com">Contact</a>
-</nav>
-
-<main>
-    <h2>My Projects</h2>
-    <table>
-        <thead>
-            <tr>
-                <th>Project Name</th>
-                <th>Description</th>
-                <th>Year</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Sound Wave</td>
-                <td>A comprehensive sound editing tool for professionals.</td>
-                <td>2023</td>
-            </tr>
-            <tr>
-                <td>Mix Master</td>
-                <td>An intuitive mixing app for budding artists.</td>
-                <td>2022</td>
-            </tr>
-            <tr>
-                <td>Beat Maker</td>
-                <td>A rhythm creation platform for musicians.</td>
-                <td>2024</td>
-            </tr>
-        </tbody>
-    </table>
-</main>
-
-<footer>
-    <p>Site made by and updated by Wyatt Kraai</p>
-</footer>
-
+    <header>
+        <h1>iMacWeirdo's Project Space</h1>
+    </header>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+    </nav>
+    <main>
+        <section>
+            <h2>Welcome</h2>
+            <h3>My Projects</h3>
+            <table>
+                <tr>
+                    <th>Project Name</th>
+                    <th>Description</th>
+                    <th>Year</th>
+                </tr>
+                <tr>
+                    <td>Sound Wave</td>
+                    <td>A comprehensive sound editing tool for professionals.</td>
+                    <td>2023</td>
+                </tr>
+                <tr>
+                    <td>Mix Master</td>
+                    <td>An intuitive mixing app for budding artists.</td>
+                    <td>2022</td>
+                </tr>
+                <tr>
+                    <td>Beat Maker</td>
+                    <td>A rhythm creation platform for musicians.</td>
+                    <td>2024</td>
+                </tr>
+            </table>
+        </section>
+    </main>
+    <footer>
+        <p>Site made by and updated by Wyatt Kraai</p>
+    </footer>
 </body>
 </html>
