--- a/index.html
+++ b/index.html
@@ -3,48 +3,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>iMacWeirdo's Project Space</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>About Us - Retro Audio Talk</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            color: #000;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #003366;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav {
+            display: flex;
+            justify-content: center;
+            background-color: #cce6ff;
+            padding: 5px 0;
+        }
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: #003366;
+            font-weight: bold;
+        }
+        main {
+            padding: 20px;
+            width: 80%;
+            margin: 20px auto;
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            background-color: #003366;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+        h1 {
+            font-size: 24px;
+            text-align: center;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        th, td {
+            border: 1px solid #ccc;
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            background-color: #003366;
+            color: white;
+        }
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>iMacWeirdo's Project Space</h1>
-    </header>
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
-    </nav>
-    <main>
-        <section>
-            <h2>Welcome</h2>
-            <h3>My Projects</h3>
-            <table>
-                <tr>
-                    <th>Project Name</th>
-                    <th>Description</th>
-                    <th>Year</th>
-                </tr>
-                <tr>
-                    <td>Sound Wave</td>
-                    <td>A comprehensive sound editing tool for professionals.</td>
-                    <td>2023</td>
-                </tr>
-                <tr>
-                    <td>Mix Master</td>
-                    <td>An intuitive mixing app for budding artists.</td>
-                    <td>2022</td>
-                </tr>
-                <tr>
-                    <td>Beat Maker</td>
-                    <td>A rhythm creation platform for musicians.</td>
-                    <td>2024</td>
-                </tr>
-            </table>
-        </section>
-    </main>
-    <footer>
-        <p>Site made by and updated by Wyatt Kraai</p>
-    </footer>
+
+<header>
+    <h1>About Retro Audio Talk</h1>
+</header>
+
+<nav>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Products</a>
+    <a href="#">Contact</a>
+</nav>
+
+<main>
+    <h2>My Projects</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Project Name</th>
+                <th>Description</th>
+                <th>Year</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Sound Wave</td>
+                <td>A comprehensive sound editing tool for professionals.</td>
+                <td>2023</td>
+            </tr>
+            <tr>
+                <td>Mix Master</td>
+                <td>An intuitive mixing app for budding artists.</td>
+                <td>2022</td>
+            </tr>
+            <tr>
+                <td>Beat Maker</td>
+                <td>A rhythm creation platform for musicians.</td>
+                <td>2024</td>
+            </tr>
+        </tbody>
+    </table>
+</main>
+
+<footer>
+    <p>&copy; 2024 Retro Audio Talk. All rights reserved.</p>
+</footer>
+
 </body>
 </html>
