--- a/index.html
+++ b/index.html
@@ -76,10 +76,9 @@
 </header>
 
 <nav>
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Products</a>
-    <a href="#">Contact</a>
+    <a href="/index.html">Home</a>
+    <a href="/about.html">About</a>
+    <a href="mailto:imacweirdo@outlook.com">Contact</a>
 </nav>
 
 <main>
