--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <body>
 
 <header>
-    <h1>About Retro Audio Talk</h1>
+    <h1>iMacWeirdo's Projects</h1>
 </header>
 
 <nav>
@@ -88,31 +88,31 @@
             <tr>
                 <th>Project Name</th>
                 <th>Description</th>
-                <th>Year</th>
+                <th>Date</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>Sound Wave</td>
-                <td>A comprehensive sound editing tool for professionals.</td>
-                <td>2023</td>
+                <td><a href="/ramsa_max.html">Ramsa MAX Software</a></td>
+                <td>The seemingly disappeared 1990s software is now available, once again!</td>
+                <td>11/6/2024</td>
             </tr>
             <tr>
-                <td>Mix Master</td>
-                <td>An intuitive mixing app for budding artists.</td>
-                <td>2022</td>
+                <td><em>N/A</em></td>
+                <td><em>N/A</em></td>
+                <td><em>N/A</em></td>
             </tr>
             <tr>
-                <td>Beat Maker</td>
-                <td>A rhythm creation platform for musicians.</td>
-                <td>2024</td>
+                <td><em>N/A</em></td>
+                <td><em>N/A</em></td>
+                <td><em>N/A</em></td>
             </tr>
         </tbody>
     </table>
 </main>
 
 <footer>
-    <p>&copy; 2024 Retro Audio Talk. All rights reserved.</p>
+    <p>Site made and updated by Wyatt Kraai</p>
 </footer>
 
 </body>
