--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -82,33 +82,8 @@
 </nav>
 
 <main>
-    <h2>My Projects</h2>
-    <table>
-        <thead>
-            <tr>
-                <th>Project Name</th>
-                <th>Description</th>
-                <th>Year</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Sound Wave</td>
-                <td>A comprehensive sound editing tool for professionals.</td>
-                <td>2023</td>
-            </tr>
-            <tr>
-                <td>Mix Master</td>
-                <td>An intuitive mixing app for budding artists.</td>
-                <td>2022</td>
-            </tr>
-            <tr>
-                <td>Beat Maker</td>
-                <td>A rhythm creation platform for musicians.</td>
-                <td>2024</td>
-            </tr>
-        </tbody>
-    </table>
+    <h2>Panasonic Ramsa MAX Software</h2>
+        <p>The Panasonic Ramsa WR-DA7 and WR-DA7 mkII</p>
 </main>
 
 <footer>
