--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -87,7 +87,7 @@
 </main>
 
 <footer>
-    <p>&copy; 2024 Retro Audio Talk. All rights reserved.</p>
+    <p>Site mad and updated by Wyatt Kraai</p>
 </footer>
 
 </body>
