--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -83,7 +83,9 @@
 
 <main>
     <h2>Panasonic Ramsa MAX Software</h2>
-        <p>The Panasonic Ramsa WR-DA7 and WR-DA7 mkII</p>
+        <p>The Panasonic Ramsa WR-DA7 and WR-DA7 mkII are very nice old professional audio mixers. Originally, they came with a piece of software (Ramsa MAX), but seeiming how many of these are bought second hand, the software has been lost almost entirely. That all changed about a week ago, when I directly emailed Justin Arey, the site admin at <a href="http://audiotalkback.com">audiotalkback</a>. He managed to find a copy of it and send it to me, so I've decided to pay it forwarward, if you will.</p>
+    <h3>Installing the Ramsa MAX Software</h3> 
+        <p></p>
 </main>
 
 <footer>
