--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -87,6 +87,7 @@
     <h3>Installing the Ramsa MAX Software</h3> 
         <h6>Firts, you'll need a computer.</h6>
         <p>Pretty much any computer running Windows 95 through Windows 10 will work. I personally use a Windows 10 computer with compatibility settings set to Windows 98 for the installation.</p>
+        <img src="DA7_compatibility.png" alt="Settings for Installation">
 </main>
 
 <footer>
