--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="/Resources/RAMSA.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ramsa MAX Software</title>
     <style>
@@ -83,11 +84,12 @@
 
 <main>
     <h2>Panasonic Ramsa MAX Software</h2>
-        <p>The Panasonic Ramsa WR-DA7 and WR-DA7 mkII are very nice old professional audio mixers. Originally, they came with a piece of software (Ramsa MAX), but seeiming how many of these are bought second hand, the software has been lost almost entirely. That all changed about a week ago, when I directly emailed Justin Arey, the site admin at <a href="http://audiotalkback.com">audiotalkback</a>. He managed to find a copy of it and send it to me, so I've decided to pay it forwarward, if you will.</p>
+        <p>The Panasonic Ramsa WR-DA7 and WR-DA7 mkII are very nice old professional audio mixers. Originally, they came with a piece of software (Ramsa MAX), but seeing how many of these are bought second-hand, the software has been lost almost entirely. That all changed about a week ago when I directly emailed Justin Arey, the site admin at <a href="http://audiotalkback.com">audiotalkback</a>. He managed to find a copy of it and send it to me, so I've decided to pay it forwarward, if you will.</p>
     <h3>Installing the Ramsa MAX Software</h3> 
-        <h6>Firts, you'll need a computer.</h6>
-        <p>Pretty much any computer running Windows 95 through Windows 10 will work. I personally use a Windows 10 computer with compatibility settings set to Windows 98 for the installation.</p>
+        <h5>First, you'll need a computer.</h5>
+        <p>Pretty much any computer running Windows 95 through Windows 10 will work. I use a Windows 10 computer with compatibility settings set to Windows 98 for the installation.</p>
         <img src="DA7_compatibility.png" alt="Settings for Installation">
+        <h6>Shown above,</h6>
 </main>
 
 <footer>
