--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -86,8 +86,15 @@
     <h2>Panasonic Ramsa MAX Software</h2>
         <p>The Panasonic Ramsa WR-DA7 and WR-DA7 mkII are very nice old professional audio mixers. Originally, they came with a piece of software (Ramsa MAX), but seeing how many of these are bought second-hand, the software has been lost almost entirely. That all changed about a week ago when I directly emailed Justin Arey, the site admin at <a href="http://audiotalkback.com">audiotalkback</a>. He managed to find a copy of it and send it to me, so I've decided to pay it forwarward, if you will.</p>
     <h3>Installing the Ramsa MAX Software</h3> 
-        <h5>First, you'll need a computer.</h5>
-        <p>Pretty much any computer running Windows 95 through Windows 10 will work. I use a Windows 10 computer with compatibility settings set to Windows 98 for the installation.</p>
+        <h4>First, you'll need a computer.</h4>
+            <p>Almost any computer running Windows 95 through Windows 10 will work. I use a Windows 10 computer with compatibility settings set to Windows 98 for the installation.</p>
+            <p>Now that you have a computer, you can start the installation.</p>
+            <ul>
+                <li>Download the installation zip from <a href="/Resources/ramsa_max.html">here</a></li>
+                <li>Use an unzipping tool such as 7zip or the windows archive extractor.</li>
+                <li>Install the software</li>
+            </ul>
+        
         <img src="DA7_compatibility.png" alt="Settings for Installation">
         <h6>Shown above,</h6>
 </main>
