--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -90,7 +90,7 @@
             <p>Almost any computer running Windows 95 through Windows 10 will work. I use a Windows 10 computer with compatibility settings set to Windows 98 for the installation.</p>
             <p>Now that you have a computer, you can start the installation.</p>
             <ul>
-                <li>Download the installation zip from <a href="/Resources/ramsa_max.html">here</a></li>
+                <li>Download the installation zip from <a href="/Resources/ramsa_max.zip">here</a></li>
                 <li>Use an unzipping tool such as 7zip or the windows archive extractor.</li>
                 <li>Install the software</li>
             </ul>
