--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -94,7 +94,14 @@
                 <li>Use an unzipping tool such as 7zip or the windows archive extractor.</li>
                 <li>Install the software</li>
             </ul>
-        
+        <h4>Making sure you have the correct compatibility settings</h4>
+            <ul>
+                <li>Open the folder created by unzipping the downloaded file (usually called ramsa_software).</li>
+                <li> Right-click on "installer.EXE" and select the "Properties" menu.</li>
+                <li> Select compatibility in the navigation menu at the top of the windows that opens.</li>
+                <li>Under the "Compatibility mode" section, check the box that says "Run this program in compatibility mode for:".</li>
+                <li>In the dropdown menu, select either Windows 95 or Windows 98 / Windows ME (Windows 98 worked slightly faster for me).</li>
+            </ul>
         <img src="DA7_compatibility.png" alt="Settings for Installation">
         <h6>Shown above,</h6>
 </main>
