--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -102,7 +102,7 @@
                 <li>Under the "Compatibility mode" section, check the box that says "Run this program in compatibility mode for:".</li>
                 <li>In the dropdown menu, select either Windows 95 or Windows 98 / Windows ME (Windows 98 worked slightly faster for me).</li>
             </ul>
-        <img src="DA7_compatibility.png" alt="Settings for Installation">
+        <img src="/Resources/DA7_compatibility.png" alt="Settings for Installation">
         <h6>Shown above,</h6>
 </main>
 
