--- a/about.html
+++ b/about.html
@@ -73,8 +73,12 @@
     <h2>My Mission</h2>
     <p>I aim to bring old audio software that has been "wiped" from the internet back to light and make it completely available to the general public.</p>
     
-    <h2>Join Us</h2>
-    <p>We invite you to become a part of our community. Whether you're looking for advice on the latest gear or wanting to share your own experiences, Retro Audio Talk is the place for you.</p>
+    <h2>Join Me</h2>
+    <p>If you have any insight to share, any complaints, or any other such business, feel free to email me at <a href="mailto:imacweirdo@outlook.com"></a>.</p>
+    <p>  </p>
+    <p>  </p>
+    <br></br>
+
 </main>
 
 <footer>
