--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
     <p>I am just a random kid from Iowa interested in all things technology.</p>
     
     <h2>My Mission</h2>
-    <p>I aim to bring old audio software that has been "wiped" from the internet back to light and make it completely available to the general public.</p>
+    <p>I aim to solve problems that I have (or that others ask me to help with) and share the results publicly with others who may have the same problem.</p>
     
     <h2>Join Me</h2>
     <p>If you have any insight to share, any complaints, or any other such business, feel free to email me at <a href="mailto:imacweirdo@outlook.com"></a>.</p>
