--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -103,7 +103,11 @@
                 <li>In the dropdown menu, select either Windows 95 or Windows 98 / Windows ME (Windows 98 worked slightly faster for me).</li>
             </ul>
         <img src="/Resources/DA7_compatibility.png" alt="Settings for Installation">
-        <h6>Shown above,</h6>
+        <img src="/Resources/setup_start.png" alt="Settings for Installation">
+        <img src="/Resources/setup_password.png" alt="Settings for Installation">
+        <img src="/Resources/setup_end.png" alt="Settings for Installation">
+        <img src="/Resources/MAX_start.png" alt="Settings for Installation">
+        <img src="/Resources/MAX_op.png" alt="Settings for Installation">
     <p>  </p>
     <p>  </p>
     <br></br>
