--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ramsa MAX Software</title>
     <style>
+        img.one {
+          height: auto;
+          width: auto;
+        }
         body {
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
@@ -102,12 +106,12 @@
                 <li>Under the "Compatibility mode" section, check the box that says "Run this program in compatibility mode for:".</li>
                 <li>In the dropdown menu, select either Windows 95 or Windows 98 / Windows ME (Windows 98 worked slightly faster for me).</li>
             </ul>
-        <img src="/Resources/DA7_compatibility.png" alt="Settings for Installation">
-        <img src="/Resources/setup_start.png" alt="Settings for Installation">
-        <img src="/Resources/setup_password.png" alt="Settings for Installation">
-        <img src="/Resources/setup_end.png" alt="Settings for Installation">
-        <img src="/Resources/MAX_start.png" alt="Settings for Installation">
-        <img src="/Resources/MAX_op.png" alt="Settings for Installation">
+        <img class = "one" src="/Resources/DA7_compatibility.png" alt="Settings for Installation">
+        <img class="one" src="/Resources/setup_start.png" alt="Settings for Installation">
+        <img class="one" src="/Resources/setup_password.png" alt="Settings for Installation">
+        <img class="one" src="/Resources/setup_end.png" alt="Settings for Installation">
+        <img class="one" src="/Resources/MAX_start.png" alt="Settings for Installation">
+        <img class="one" src="/Resources/MAX_op.png" alt="Settings for Installation">
     <p>  </p>
     <p>  </p>
     <br></br>
