--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -10,6 +10,10 @@
           height: auto;
           width: auto;
         }
+        img.two {
+          height: 50%;
+          width: 50%;
+        }
         body {
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
@@ -106,12 +110,12 @@
                 <li>Under the "Compatibility mode" section, check the box that says "Run this program in compatibility mode for:".</li>
                 <li>In the dropdown menu, select either Windows 95 or Windows 98 / Windows ME (Windows 98 worked slightly faster for me).</li>
             </ul>
-        <img class = "one" src="/Resources/DA7_compatibility.png" alt="Settings for Installation">
-        <img class="one" src="/Resources/setup_start.png" alt="Settings for Installation">
-        <img class="one" src="/Resources/setup_password.png" alt="Settings for Installation">
-        <img class="one" src="/Resources/setup_end.png" alt="Settings for Installation">
-        <img class="one" src="/Resources/MAX_start.png" alt="Settings for Installation">
-        <img class="one" src="/Resources/MAX_op.png" alt="Settings for Installation">
+        <img class = "two" src="/Resources/DA7_compatibility.png" alt="Settings for Installation">
+        <img class="two" src="/Resources/setup_start.png" alt="Settings for Installation">
+        <img class="two" src="/Resources/setup_password.png" alt="Settings for Installation">
+        <img class="two" src="/Resources/setup_end.png" alt="Settings for Installation">
+        <img class="two" src="/Resources/MAX_start.png" alt="Settings for Installation">
+        <img class="two" src="/Resources/MAX_op.png" alt="Settings for Installation">
     <p>  </p>
     <p>  </p>
     <br></br>
