--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -110,6 +110,7 @@
                 <li>Under the "Compatibility mode" section, check the box that says "Run this program in compatibility mode for:".</li>
                 <li>In the dropdown menu, select either Windows 95 or Windows 98 / Windows ME (Windows 98 worked slightly faster for me).</li>
             </ul>
+        <h4>Running the installer</h4>
         <img class = "two" src="/Resources/DA7_compatibility.png" alt="Settings for Installation">
         <img class="two" src="/Resources/setup_start.png" alt="Settings for Installation">
         <img class="two" src="/Resources/setup_password.png" alt="Settings for Installation">
