--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -11,8 +11,8 @@
           width: auto;
         }
         img.two {
-          height: 50%;
-          width: 50%;
+          height: auto;
+          width: 75%;
         }
         body {
             font-family: Arial, sans-serif;
