--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -7,7 +7,7 @@
     <title>Ramsa MAX Software</title>
     <style>
         img.one {
-          height: auto;
+          height: 25%;
           width: auto;
         }
         img.two {
