--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -111,7 +111,7 @@
                 <li>In the dropdown menu, select either Windows 95 or Windows 98 / Windows ME (Windows 98 worked slightly faster for me).</li>
             </ul>
         <h4>Running the installer</h4>
-        <img class = "two" src="/Resources/DA7_compatibility.png" alt="Settings for Installation">
+        <img class = "one" src="/Resources/DA7_compatibility.png" alt="Settings for Installation">
         <img class="two" src="/Resources/setup_start.png" alt="Settings for Installation">
         <img class="two" src="/Resources/setup_password.png" alt="Settings for Installation">
         <img class="two" src="/Resources/setup_end.png" alt="Settings for Installation">
