--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -115,7 +115,7 @@
         <img class="two" src="/Resources/setup_start.png" alt="Settings for Installation">
         <img class="two" src="/Resources/setup_password.png" alt="Settings for Installation">
         <img class="two" src="/Resources/setup_end.png" alt="Settings for Installation">
-        <img class="two" src="/Resources/MAX_start.png" alt="Settings for Installation">
+        <img class="one" src="/Resources/MAX_start.png" alt="Settings for Installation">
         <img class="two" src="/Resources/MAX_op.png" alt="Settings for Installation">
     <p>  </p>
     <p>  </p>
