--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -112,11 +112,11 @@
             </ul>
         <h4>Running the installer</h4>
         <img class = "one" src="/Resources/DA7_compatibility.png" alt="Settings for Installation">
-        <img class="two" src="/Resources/setup_start.png" alt="Settings for Installation">
-        <img class="two" src="/Resources/setup_password.png" alt="Settings for Installation">
-        <img class="two" src="/Resources/setup_end.png" alt="Settings for Installation">
-        <img class="one" src="/Resources/MAX_start.png" alt="Settings for Installation">
-        <img class="two" src="/Resources/MAX_op.png" alt="Settings for Installation">
+        <img class="two" src="/Resources/setup_start.png" alt="Start setup">
+        <img class="two" src="/Resources/setup_password.png" alt="Password field for setup">
+        <img class="two" src="/Resources/setup_end.png" alt="End of setup">
+        <img class="one" src="/Resources/MAX_start.png" alt="MAX startup find">
+        <img class="two" src="/Resources/MAX_op.png" alt="MAX software operating">
     <p>  </p>
     <p>  </p>
     <br></br>
