--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -7,11 +7,11 @@
     <title>Ramsa MAX Software</title>
     <style>
         img.one {
-          height: 15%;
-          width: auto;
+          height: 25%;
+          width: 25%;
         }
         img.two {
-          height: auto;
+          height: 75%;
           width: 75%;
         }
         body {
