--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -114,8 +114,13 @@
         <img class = "one" src="/Resources/DA7_compatibility.png" alt="Settings for Installation">
         <h4>Running the installer</h4>
         <img class="two" src="/Resources/setup_start.png" alt="Start setup">
-        
+        <ul>
+            <li>Click next for the until you get to the window titled "Installing" and a password window pops up.</li>
+        </ul>
         <img class="two" src="/Resources/setup_password.png" alt="Password field for setup">
+        <ul>
+            <li>When you get to the password section, enter C04C-5BD9-DBC305 (can also be found in the texf tile included in the download).</li>
+        </ul>
         <img class="two" src="/Resources/setup_end.png" alt="End of setup">
         <img class="one" src="/Resources/MAX_start.png" alt="MAX startup find">
         <img class="two" src="/Resources/MAX_op.png" alt="MAX software operating">
