--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -122,7 +122,13 @@
             <li>When you get to the password section, enter C04C-5BD9-DBC305 (can also be found in the texf tile included in the download).</li>
         </ul>
         <img class="two" src="/Resources/setup_end.png" alt="End of setup">
+        <ul>
+            <li>After installation completes, click finish.</li>
+        </ul>
         <img class="one" src="/Resources/MAX_start.png" alt="MAX startup find">
+        <ul>
+            <li>To opem the program, you'll need to search for it in the start menu. (If you want to make a desktop shortcut, there is a good walkthrough <a href="https://superuser.com/questions/1724929/how-do-i-add-a-desktop-shortcut-in-windows-10">here</a>.</li>
+        </ul>
         <img class="two" src="/Resources/MAX_op.png" alt="MAX software operating">
     <p>  </p>
     <p>  </p>
