--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -127,9 +127,12 @@
         </ul>
         <img class="one" src="/Resources/MAX_start.png" alt="MAX startup find">
         <ul>
-            <li>To opem the program, you'll need to search for it in the start menu. (If you want to make a desktop shortcut, there is a good walkthrough <a href="https://superuser.com/questions/1724929/how-do-i-add-a-desktop-shortcut-in-windows-10">here</a>.</li>
+            <li>To opem the program, you'll need to search for it in the start menu. (If you want to make a desktop shortcut, there is a good walkthrough <a href="https://superuser.com/questions/1724929/how-do-i-add-a-desktop-shortcut-in-windows-10">here</a>).</li>
         </ul>
         <img class="two" src="/Resources/MAX_op.png" alt="MAX software operating">
+        <ul>
+            <li>After you have the software installed and running, I recomend using <a href="/Resources/max_manual.pdf>this</a> manual for instructions on using it.</li>
+        </ul>
     <p>  </p>
     <p>  </p>
     <br></br>
