--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -131,7 +131,7 @@
         </ul>
         <img class="two" src="/Resources/MAX_op.png" alt="MAX software operating">
         <ul>
-            <li>After you have the software installed and running, I recomend using <a href="/Resources/max_manual.pdf>this</a> manual for instructions on using it.</li>
+            <li>After you have the software installed and running, I recomend using <a href="/Resources/max_manual.pdf">this</a> manual for instructions on using it.</li>
         </ul>
     <p>  </p>
     <p>  </p>
