--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -92,7 +92,7 @@
 
 <main>
     <h2>Panasonic Ramsa MAX Software</h2>
-        <p>The Panasonic Ramsa WR-DA7 and WR-DA7 mkII are very nice old professional audio mixers. Originally, they came with a piece of software (Ramsa MAX), but seeing how many of these are bought second-hand, the software has been lost almost entirely. That all changed about a week ago when I directly emailed Justin Arey, the site admin at <a href="http://audiotalkback.com">audiotalkback</a>. He managed to find a copy of it and send it to me, so I've decided to pay it forwarward, if you will.</p>
+        <p>The Panasonic Ramsa WR-DA7 and WR-DA7 mkII are very nice old professional audio mixers. Originally, they came with a piece of software (Ramsa MAX), but seeing how many of these are bought second-hand, the software has been lost almost entirely. That all changed about a week ago when I directly emailed Justin Arey, the site admin at <a href="http://audiotalkback.com">audiotalkback</a>. He managed to find a copy of it and send it to me, so I've decided to pay it forward, if you will.</p>
     <h3>Installing the Ramsa MAX Software</h3> 
         <h4>First, you'll need a computer.</h4>
             <p>Almost any computer running Windows 95 through Windows 10 will work. I use a Windows 10 computer with compatibility settings set to Windows 98 for the installation.</p>
@@ -115,11 +115,11 @@
         <h4>Running the installer</h4>
         <img class="two" src="/Resources/setup_start.png" alt="Start setup">
         <ul>
-            <li>Click next for the until you get to the window titled "Installing" and a password window pops up.</li>
+            <li>Click next until you get to the window titled "Installing" and a password window pops up.</li>
         </ul>
         <img class="two" src="/Resources/setup_password.png" alt="Password field for setup">
         <ul>
-            <li>When you get to the password section, enter C04C-5BD9-DBC305 (can also be found in the texf tile included in the download).</li>
+            <li>When you get to the password section, enter C04C-5BD9-DBC305 (which can also be found in the text tile included in the download).</li>
         </ul>
         <img class="two" src="/Resources/setup_end.png" alt="End of setup">
         <ul>
@@ -127,11 +127,11 @@
         </ul>
         <img class="one" src="/Resources/MAX_start.png" alt="MAX startup find">
         <ul>
-            <li>To opem the program, you'll need to search for it in the start menu. (If you want to make a desktop shortcut, there is a good walkthrough <a href="https://superuser.com/questions/1724929/how-do-i-add-a-desktop-shortcut-in-windows-10">here</a>).</li>
+            <li>To open the program, you'll need to search for it in the start menu. (If you want to make a desktop shortcut, there is a good walkthrough <a href="https://superuser.com/questions/1724929/how-do-i-add-a-desktop-shortcut-in-windows-10">here</a>).</li>
         </ul>
         <img class="two" src="/Resources/MAX_op.png" alt="MAX software operating">
         <ul>
-            <li>After you have the software installed and running, I recomend using <a href="/Resources/max_manual.pdf">this</a> manual for instructions on using it. It is for Macintosh, but it applies very similar priciples to that of the Windows version.</li>
+            <li>After you have the software installed and running, I recommend using <a href="/Resources/max_manual.pdf">this</a> manual for instructions on using it. It is for Macintosh but applies very similar principles to the Windows version.</li>
         </ul>
     <p>  </p>
     <p>  </p>
