--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -103,6 +103,7 @@
                 <li>Install the software</li>
             </ul>
         <h4>Making sure you have the correct compatibility settings</h4>
+        <h6><i>Note: If you would rather use a VM (virtual machine), I have a tutorial on that</i> <a href="/windows98_VM.html">here</a><i>.</i></h6>
             <ul>
                 <li>Open the folder created by unzipping the downloaded file (usually called ramsa_software).</li>
                 <li> Right-click on "installer.EXE" and select the "Properties" menu.</li>
@@ -111,28 +112,28 @@
                 <li>In the dropdown menu, select either Windows 95 or Windows 98 / Windows ME (Windows 98 worked slightly faster for me).</li>
             </ul>
         
-        <img class = "one" src="/Resources/DA7_compatibility.png" alt="Settings for Installation">
+            <img class = "one" src="/Resources/DA7_compatibility.png" alt="Settings for Installation">
         <h4>Running the installer</h4>
-        <img class="two" src="/Resources/setup_start.png" alt="Start setup">
-        <ul>
-            <li>Click next until you get to the window titled "Installing" and a password window pops up.</li>
-        </ul>
-        <img class="two" src="/Resources/setup_password.png" alt="Password field for setup">
-        <ul>
-            <li>When you get to the password section, enter C04C-5BD9-DBC305 (which can also be found in the text tile included in the download).</li>
-        </ul>
-        <img class="two" src="/Resources/setup_end.png" alt="End of setup">
-        <ul>
-            <li>After installation completes, click finish.</li>
-        </ul>
-        <img class="one" src="/Resources/MAX_start.png" alt="MAX startup find">
-        <ul>
-            <li>To open the program, you'll need to search for it in the start menu. (If you want to make a desktop shortcut, there is a good walkthrough <a href="https://superuser.com/questions/1724929/how-do-i-add-a-desktop-shortcut-in-windows-10">here</a>).</li>
-        </ul>
-        <img class="two" src="/Resources/MAX_op.png" alt="MAX software operating">
-        <ul>
-            <li>After you have the software installed and running, I recommend using <a href="/Resources/max_manual.pdf">this</a> manual for instructions on using it. It is for Macintosh but applies very similar principles to the Windows version.</li>
-        </ul>
+            <img class="two" src="/Resources/setup_start.png" alt="Start setup">
+            <ul>
+                <li>Click next until you get to the window titled "Installing" and a password window pops up.</li>
+            </ul>
+            <img class="two" src="/Resources/setup_password.png" alt="Password field for setup">
+            <ul>
+                <li>When you get to the password section, enter C04C-5BD9-DBC305 (which can also be found in the text tile included in the download).</li>
+            </ul>
+            <img class="two" src="/Resources/setup_end.png" alt="End of setup">
+            <ul>
+                <li>After installation completes, click finish.</li>
+            </ul>
+            <img class="one" src="/Resources/MAX_start.png" alt="MAX startup find">
+            <ul>
+                <li>To open the program, you'll need to search for it in the start menu. (If you want to make a desktop shortcut, there is a good walkthrough <a href="https://superuser.com/questions/1724929/how-do-i-add-a-desktop-shortcut-in-windows-10">here</a>).</li>
+            </ul>
+            <img class="two" src="/Resources/MAX_op.png" alt="MAX software operating">
+            <ul>
+                <li>After you have the software installed and running, I recommend using <a href="/Resources/max_manual.pdf">this</a> manual for instructions on using it. It is for Macintosh but applies very similar principles to the Windows version.</li>
+            </ul>
         
     <p>  </p>
     <p>  </p>
