--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -92,7 +92,7 @@
 
 <main>
     <h2>Panasonic Ramsa MAX Software</h2>
-        <p>The Panasonic Ramsa WR-DA7 and WR-DA7 mkII are very nice old professional audio mixers. Originally, they came with a piece of software (Ramsa MAX), but seeing how many of these are bought second-hand, the software has been lost almost entirely. That all changed about a week ago when I directly emailed Justin Arey, the site admin at <a href="http://audiotalkback.com">audiotalkback</a>. He managed to find a copy of it and send it to me, so I've decided to pay it forward, if you will.</p>
+        <p>The Panasonic Ramsa WR-DA7 and WR-DA7 mkII are very nice old professional audio mixers. Originally, they came with a piece of software (Ramsa MAX), but seeing how many of these are bought second-hand, the software has been lost almost entirely. Thanks to others over at <a href="http://audiotalkback.com">audiotalkback</a>, I managed to get my hands on a copy of the windows version.</p>
     <h3>Installing the Ramsa MAX Software</h3> 
         <h4>First, you'll need a computer.</h4>
             <p>Almost any computer running Windows 95 through Windows 10 will work. I use a Windows 10 computer with compatibility settings set to Windows 98 for the installation.</p>
