--- a/index.html
+++ b/index.html
@@ -93,15 +93,16 @@
         </thead>
         <tbody>
             <tr>
+                <td><em><a href = "/windows98_VM.html">Windows 98 Virtual Machine</a></em></td>
+                <td><em>A step-by-step in creating a Windows 98 virtual machine (helpful for my <a href = "/ramsa_max.html">Ramsa Max Project</a>).</em></td>
+                <td><em>11/8/2024</em></td>
+            </tr>
+            <tr>
                 <td><a href="/ramsa_max.html">Ramsa MAX Software</a></td>
                 <td>The seemingly disappeared 1990s software is now available, once again!</td>
                 <td>11/6/2024</td>
             </tr>
-            <tr>
-                <td><em>N/A</em></td>
-                <td><em>N/A</em></td>
-                <td><em>N/A</em></td>
-            </tr>
+            
             <tr>
                 <td><em>N/A</em></td>
                 <td><em>N/A</em></td>
