--- a/j.html
+++ b/j.html
@@ -72,14 +72,10 @@
 <body>
 
 <header>
-    <h1>Wyatt's Projects</h1>
+    <h1>Jordan Carpenter</h1>
 </header>
 
-<nav>
-    <a href="/index.html">Home</a>
-    <a href="/about.html">About</a>
-    <a href="mailto:imacweirdo@outlook.com">Contact</a>
-</nav>
+
 
 <main>
    
