--- a/j.html
+++ b/j.html
@@ -72,14 +72,14 @@
 <body>
 
 <header>
-    <h1>Jordan Carpenter</h1>
+    <h1>Why I'm Messed Up</h1>
 </header>
 
 
 
 <main>
    
-    <p>Hi Jordan! If you managed to find this, you must be a really good detective! I know that I haven't really made myself clear with anything at all, but I just really like you.</p>
+    <p>Hey! If you managed to find this, you must be a really good detective! I know that I probably shouldn't be talking about this publically, but I'm going to anyway. About 7 years ago, when we lived in out old house on the Boulevard, I was still friends with Gabe, and that was a really terrible Idea. He was decieptful, I was really dumb, and you can use your immagination to figure out what happened from there. I was originally okay with it, because I didn't understand what it was and how wrong it was to be doing it at that age. I eventually stopped liking it so much and shyed away from it, and he de-friended me. I realize that this makes me a lot less appealing in general because I'm "used goods", but I really hope that eventually I will be able to someone who can look past that, unlike 'you know who'.</p>
     
     <p>  </p>
     <p>  </p>
