--- a/j.html
+++ b/j.html
@@ -67,6 +67,19 @@
         tr:nth-child(even) {
             background-color: #f2f2f2;
         }
+        a:link { 
+              text-decoration: none; 
+        } 
+        a:visited { 
+              text-decoration: none; 
+        } 
+        a:hover { 
+              text-decoration: none; 
+        } 
+        a:active { 
+              text-decoration: none; 
+        }
+
     </style>
 </head>
 <body>
@@ -87,7 +100,7 @@
 </main>
 
 <footer>
-    <p>Site made and updated by I7W1A2Y4A6A1R1T3K9T0</p>
+    <p>Site made and updated by <a href="imacweirdo.github.io/">A total Idiot</a></p>
 </footer>
 
 </body>
