--- a/j.html
+++ b/j.html
@@ -68,16 +68,20 @@
             background-color: #f2f2f2;
         }
         a:link { 
-              text-decoration: none; 
+              text-decoration: none;
+              color: black;
         } 
         a:visited { 
-              text-decoration: none; 
+              text-decoration: none;
+              color: black;
         } 
         a:hover { 
               text-decoration: none; 
+              color: black;         
         } 
         a:active { 
               text-decoration: none; 
+              color: black;
         }
 
     </style>
