--- a/j.html
+++ b/j.html
@@ -69,19 +69,19 @@
         }
         a:link { 
               text-decoration: none;
-              color: black;
+              color: white;
         } 
         a:visited { 
               text-decoration: none;
-              color: black;
+              color: white;
         } 
         a:hover { 
               text-decoration: none; 
-              color: black;         
+              color: white;         
         } 
         a:active { 
               text-decoration: none; 
-              color: black;
+              color: white;
         }
 
     </style>
