--- a/windows98_VM.html
+++ b/windows98_VM.html
@@ -1,1 +1,1 @@
-<p>Sorry, this site is under construction. :(</p>
+<p>Sorry, this site is under construction. :( <a href="imacweirdo.github.io/"> Go Home</a></p>
