--- a/weird.html
+++ b/weird.html
@@ -1,1 +1,119 @@
-<p>lol</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wyatt's Projects</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            color: #000;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #003366;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav {
+            display: flex;
+            justify-content: center;
+            background-color: #cce6ff;
+            padding: 5px 0;
+        }
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: #003366;
+            font-weight: bold;
+        }
+        main {
+            padding: 20px;
+            width: 80%;
+            margin: 20px auto;
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            background-color: #003366;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+        h1 {
+            font-size: 24px;
+            text-align: center;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        th, td {
+            border: 1px solid #ccc;
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            background-color: #003366;
+            color: white;
+        }
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+        a:link { 
+              text-decoration: none;
+              color: white;
+        } 
+        a:visited { 
+              text-decoration: none;
+              color: white;
+        } 
+        a:hover { 
+              text-decoration: none; 
+              color: white;         
+        } 
+        a:active { 
+              text-decoration: none; 
+              color: white;
+        }
+
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Hi Elliot</h1>
+</header>
+
+
+
+<main>
+    <h3>Why I'm Being So annoying</h3>
+    <p>Hey, Elliot. I'm sorry that I'm being so annoying by asking you about your personal life and everything, but I have good reason. I really think that Jordan likes you a bit more than she'd like to admit
+    and while there's nothing wrong with that, I honestly wish that she didn't. I know we aren't supposed to talk about these kind of things, but if you really do like her, I think that you should do what you want,
+    I just want to know, before you do. Thanks for understanding,</p>
+    <p>-Wyatt</p>
+    
+    <p>  </p>
+    <p>  </p>
+    <br></br>
+    <p>Hey! If you managed to find this, you must be a really good detective! I know that I probably shouldn't be talking about this publically, but I'm going to anyway. About 7 years ago, when we lived in out old house on the Boulevard, I was still friends with Gabe, and that was a really terrible Idea. He was decieptful, I was really dumb, and you can use your immagination to figure out what happened from there. I was originally okay with it, because I didn't understand what it was and how wrong it was to be doing it at that age. I eventually stopped liking it so much and shyed away from it, and he de-friended me. I realize that this makes me a lot less appealing in general because I'm "used goods", but I really hope that eventually I will be able to someone who can look past that, unlike 'you know who'.</p>
+    
+    <p>  </p>
+    <p>  </p>
+    <br></br>
+</main>
+
+<footer>
+    <p>Site made and updated by <a href="imacweirdo.github.io/">A total Idiot</a></p>
+</footer>
+
+</body>
+</html>
