--- a/e.html
+++ b/e.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I need to shut the Fuck up</title>
+    <title>I Need to Shut the Fuck Up</title>
     <style>
         body {
             font-family: Arial, sans-serif;
