--- a/e.html
+++ b/e.html
@@ -89,7 +89,7 @@
 <body>
 
 <header>
-    <h1>Hi Elliot</h1>
+    <h1>Hi Elliot, I Need to Shut the Fuck Up</h1>
 </header>
 
 
@@ -107,7 +107,7 @@
 </main>
 
 <footer>
-    <p>Site made and updated by <a href="imacweirdo.github.io/">A total Idiot</a></p>
+    <p>Site made and updated by <a href="https://imacweirdo.github.io/">A total Idiot</a></p>
 </footer>
 
 </body>
