--- a/pass.html
+++ b/pass.html
@@ -1,1 +1,71 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Form Example</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f9f9f9;
+        }
+        form {
+            background: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        input {
+            margin: 10px 0;
+            padding: 10px;
+            width: 100%;
+            box-sizing: border-box;
+        }
+        button {
+            padding: 10px;
+            background: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background: #0056b3;
+        }
+    </style>
+</head>
+<body>
+    <form id="myForm">
+        <label for="firstName">First Name:</label>
+        <input type="text" id="firstName" required>
 
+        <label for="birthDate">Birth Date:</label>
+        <input type="date" id="birthDate" required>
+
+        <button type="submit">Submit</button>
+    </form>
+
+    <script>
+        document.getElementById('myForm').addEventListener('submit', function(event) {
+            event.preventDefault();
+
+            const firstName = document.getElementById('firstName').value;
+            const birthDate = document.getElementById('birthDate').value;
+
+            // Replace these with the correct values
+            const correctFirstName = 'Jordan';
+            const correctBirthDate = '2007-02-04'; // Format: YYYY-MM-DD
+
+            if (firstName === correctFirstName && birthDate === correctBirthDate) {
+                window.location.href = 'nextpage.html'; // Replace with your target page
+            } else {
+                alert('Incorrect first name or birth date.');
+            }
+        });
+    </script>
+</body>
+</html>
