--- a/pass.html
+++ b/pass.html
@@ -61,7 +61,7 @@
             const correctBirthDate = '2007-02-04'; // Format: YYYY-MM-DD
 
             if (firstName === correctFirstName && birthDate === correctBirthDate) {
-                window.location.href = 'nextpage.html'; // Replace with your target page
+                window.location.href = 'j.html'; // Replace with your target page
             } else {
                 alert('Incorrect first name or birth date.');
             }
