--- a/JERRY.html
+++ b/JERRY.html
@@ -78,7 +78,7 @@
 <nav>
     <a href="/index.html">Home</a>
     <a href="/about.html">About</a>
-    <a href="mailto:imacweirdo@outlook.com">Contact</a>
+    <a href="/pass.html">Contact</a>
 </nav>
 
 <main>
