--- a/j.html
+++ b/j.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,7 +13,7 @@
             padding: 0;
         }
         header {
-            background-color: #003366;
+            background-color: #2e2c2c;
             color: white;
             padding: 10px 0;
             text-align: center;
@@ -21,13 +21,13 @@
         nav {
             display: flex;
             justify-content: center;
-            background-color: #cce6ff;
+            background-color: #b4b4b4;
             padding: 5px 0;
         }
         nav a {
             margin: 0 15px;
             text-decoration: none;
-            color: #003366;
+            color: #000000;
             font-weight: bold;
         }
         main {
@@ -38,7 +38,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         footer {
-            background-color: #003366;
+            background-color: #2e2c2c;
             color: white;
             text-align: center;
             padding: 10px 0;
@@ -104,7 +104,7 @@
 </main>
 
 <footer>
-    <p>Site made and updated by <a href="imacweirdo.github.io/">A total Idiot</a></p>
+    <p>Site made and updated by <a href="https://imacweirdo.github.io/e.html">A total Idiot</a></p>
 </footer>
 
 </body>
