--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
             </tr>
             
             <tr>
-                <td><em>N/A</em></td>
-                <td><em>N/A</em></td>
-                <td><em>N/A</em></td>
+                <td><em><a href="/JERRY.html">JERRY</em></td>
+                <td><em>JERRY</em></td>
+                <td><em>JERRY</em></td>
             </tr>
         </tbody>
     </table>
