--- a/JERRY.html
+++ b/JERRY.html
@@ -1,19 +1,23 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JERRY</title>
+    <link rel="icon" href="https://github.com/iMacWeirdo/iMacWeirdo.github.io/blob/main/Resources/JERRY/CUP.png?raw=true" type="image/png">
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-image: url('https://github.com/iMacWeirdo/iMacWeirdo.github.io/blob/main/Resources/JERRY/BACKGROUND.png?raw=true');
+            background-size: cover;
+            background-position: center;
             color: #000;
             margin: 0;
             padding: 0;
         }
         header {
-            background-color: #2e2c2c;
+            background-color: rgba(46, 44, 44, 0.8);
             color: white;
             padding: 10px 0;
             text-align: center;
@@ -21,7 +25,7 @@
         nav {
             display: flex;
             justify-content: center;
-            background-color: #b4b4b4;
+            background-color: rgba(180, 180, 180, 0.8);
             padding: 5px 0;
         }
         nav a {
@@ -34,11 +38,11 @@
             padding: 20px;
             width: 80%;
             margin: 20px auto;
-            background-color: white;
+            background-color: rgba(255, 255, 255, 0.9);
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         footer {
-            background-color: #2e2c2c;
+            background-color: rgba(46, 44, 44, 0.8);
             color: white;
             text-align: center;
             padding: 10px 0;
@@ -77,12 +81,13 @@
 
 <nav>
     <a href="/index.html">Home</a>
-    <a href="/about.html">About</a>
+    <a href="/JERRYabout.html">About</a>
     <a href="/pass.html">Contact</a>
 </nav>
 
 <main>
-    
+    <img src="https://raw.githubusercontent.com/iMacWeirdo/iMacWeirdo.github.io/refs/heads/main/Resources/JERRY/JERRY.png" alt="JERRY">
+    <img src="https://github.com/iMacWeirdo/iMacWeirdo.github.io/blob/main/Resources/JERRY/HUGEBACK.png?raw=true" alt="HUGEBACK">
 </main>
 
 <footer>
